<resources>
    <string name="app_name">Inventory</string>
    <string name="add_equipment">Add</string>
    <string name="scan_qr">Scan Qr</string>
    <string name="result_not_found">Equipment Not Found (404)</string>
    <string name="json_exception">Internal Exception (JSON)</string>
    <string name="equipment_details">Equipment Details</string>
    <string name="serial_number">Serial Number</string>
    <string name="equipment_name">Equipment Name</string>
    <string name="btn_generate">Generate QR</string>
    <string name="dis_qr">Qr Code</string>
    <string name="btn_save">Save</string>
    <string name="equipment_saved">Equipment Saved!</string>
</resources>
